<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewsItemActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/news_item_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/news_item_toolbar"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/news_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/news_item_publish_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_publish_date"
            android:textSize="14sp"
            android:textStyle="italic" />

        <org.sufficientlysecure.htmltextview.HtmlTextView
            android:id="@+id/news_item_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:text="@string/default_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textSize="21sp" />
    </LinearLayout>


</RelativeLayout>