<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="99">
                <TextView
                    android:id="@+id/row_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_title"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/row_publish_date"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        android:text="@string/default_publish_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        cardView:layout_constraintStart_toStartOf="parent"
                        cardView:layout_constraintTop_toTopOf="parent"
                        cardView:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                        android:id="@+id/row_author"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        android:text="@string/default_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        cardView:layout_constraintStart_toStartOf="@+id/row_publish_date"
                        cardView:layout_constraintTop_toTopOf="parent"
                        cardView:layout_constraintBottom_toBottomOf="parent"
                        cardView:layout_constraintEnd_toEndOf="parent"
                        cardView:layout_constraintHorizontal_bias="1"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end">
                <ImageView
                    android:id="@+id/row_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>